--- a/package.json
+++ b/package.json
@@ -20,18 +20,27 @@
   "homepage": "https://github.com/femigabs/e-commerce#readme",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@sendgrid/mail": "^7.2.2",
     "bcrypt": "^5.0.0",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "db-migrate": "^0.11.11",
     "db-migrate-pg": "^1.2.2",
     "dotenv": "^8.2.0",
+    "express-session": "^1.17.1",
     "http-status": "^1.4.2",
     "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
     "mocha": "^8.0.1",
+    "moment": "^2.27.0",
     "nodemailer": "^6.4.10",
+    "nyc": "^15.1.0",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "pg": "^8.3.0",
     "pg-promise": "^10.5.8",
