--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@sendgrid/mail": "^7.2.2",
+    "aws-sdk": "^2.731.0",
     "bcrypt": "^5.0.0",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
@@ -36,6 +37,7 @@
     "mailgun-js": "^0.22.0",
     "mocha": "^8.0.1",
     "moment": "^2.27.0",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "nyc": "^15.1.0",
     "passport": "^0.4.1",
