--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "pg": "^8.3.0",
     "pg-promise": "^10.5.8",
     "redis": "^3.0.2",
+    "serialize-javascript": "^4.0.0",
     "supertest": "^4.0.2",
     "uuid": "^8.2.0",
     "winston": "^3.3.3"
