--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "ignore-class-method": []
   },
   "scripts": {
-    "test": "ECOMMERCE_NODE_ENV=test nyc --reporter=html --reporter=text-summary node_modules/.bin/mocha --timeout 300000 --require @babel/register \"./test/**/*.js\" --exit",
+    "test": "NODE_ENV=test nyc --reporter=html --reporter=text-summary node_modules/.bin/mocha --timeout 300000 --require @babel/register \"./test/**/*.js\" --exit",
     "start": "nodemon --exec babel-node src/app.js",
     "devstart": "nodemon --exec babel-node src/app.js",
     "migrate:up": "db-migrate up --config database.json -e development",
