--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ script:
 - npm run test
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+after_success:
+  - npm run coverage
 env:
   global:
     CC_TEST_REPORTER_ID=9da5e9efde1962e57dbb2a42fa661b1c77ae797093dd964d46e06d83a4447d3e
