--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node src/app.js",
+    "start": "node src/app.js",
+    "local:start": "nodemon --exec babel-node src/app.js",
     "lint": "eslint --ext js ."
   },
   "repository": {
