--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "test": "NODE_ENV=test nyc --reporter=html --reporter=text-summary node_modules/.bin/mocha --timeout 300000 --require @babel/register \"./test/**/*.js\" --exit",
-    "start": "node src/app.js",
+    "start": "node build/app.js",
     "devstart": "nodemon --exec babel-node src/app.js",
     "migrate:up": "db-migrate up --config database.json -e development",
     "migrate:down": "db-migrate down -c 200 --config database.json -e development",
