--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "migrate-test:up": "db-migrate up --config database.json -e test",
     "migrate-test:down": "db-migrate down -c 200 --config database.json -e test",
     "premigrate-test:down": "db-migrate down:seeds -c 200 --config database.json -e test",
-    "lint": "eslint --ext js ."
+    "lint": "eslint --ext js .",
+    "build": "babel src -d --out-dir build"
   },
   "repository": {
     "type": "git",
