--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -70,8 +70,8 @@ jobs:
       GOOGLE_CALLBACK_URL: ${{secrets.GOOGLE_CALLBACK_URL}}
       PASSWORD: ${{secrets.PASSWORD}}
       SALT: ${{secrets.SALT}}
-      REDIS_URL: ${{secrets.REDIS_URL}}
+      REDIS_URL: 'redis://127.0.0.1:6379'
       ACCESS_KEY_ID: ${{secrets.ACCESS_KEY_ID}}
-      SECRET_ACCESS_KEY: ${{secrets.SECRET_ACCESS_KEY}}
+      SECRET_ACCESS_KEY: '${{secrets.SECRET_ACCESS_KEY}}'
       BUCKET_NAME: ${{secrets.BUCKET_NAME}}
       CC_TEST_REPORTER_ID: 9da5e9efde1962e57dbb2a42fa661b1c77ae797093dd964d46e06d83a4447d3e
